--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -46,38 +46,34 @@
     <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=delete_avatar"
         onclick="clickHandler(this.dataset.uri)">new 刪除模型</a>
     </br>
+    <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=download"
+        onclick="clickHandler(this.dataset.uri)">new download</a>
+    </br>
 
     <h3>Deep Link 同帳號</h3>
     <a href="#"
-        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&state=webstate&state=appstate&scopes=31&code=pass"
+        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&amp;state=webstate&state=appstate&scopes=31&code=pass"
         onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
     </br>
-    <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=delete_avatar&state=webstate&state=appstate&scopes=31&code=pass"
+    <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=delete_avatar&amp;state=webstate&state=appstate&scopes=31&code=pass"
         onclick="clickHandler(this.dataset.uri)">new 刪除模型</a>
     </br>
-    <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=campaign_card&state=webstate&state=appstate&scopes=31&code=pass"
-        onclick="clickHandler(this.dataset.uri)">new 賀卡</a>
-    </br>
     <input id="avatarInput" type="text" placeholder="輸入 avatarId" />
-    <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=appearance_setting&avatarId=<avatarId>&state=webstate&state=appstate&scopes=31&code=pass" 
+    <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=appearance_setting&amp;avatarId=<avatarId>&amp;state=webstate&state=appstate&scopes=31&code=pass" 
         onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
     </br>
 
     <h3>Deep Link 不同帳號</h3>
     <a href="#"
-        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&state=webstate&state=appstate&scopes=31&code=fail"
+        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&amp;state=webstate&state=appstate&scopes=31&code=fail"
         onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
     </br>
     <a href="#"
-        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=delete_avatar&state=webstate&state=appstate&scopes=31&code=fail"
+        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=delete_avatar&amp;state=webstate&state=appstate&scopes=31&code=fail"
         onclick="clickHandler(this.dataset.uri)">new 刪除模型</a>
     </br>
     <a href="#"
-        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=campaign_card&state=webstate&state=appstate&scopes=31&code=fail"
-        onclick="clickHandler(this.dataset.uri)">new 賀卡</a>
-    </br>
-    <a href="#"
-        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=appearance_setting&avatarId=0&state=webstate&state=appstate&scopes=31&code=fail"
+        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=appearance_setting&amp;avatarId=0&amp;state=webstate&state=appstate&scopes=31&code=fail"
         onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
     </br>
 
