--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <!-- <h3>新連結測試</h3>
-    <a id="test" href="#" data-uri="ijomymStage://open" onclick="clickHandler(this.dataset.uri)">ijomymStage://open</a>
+    <a id="test" href="#" data-uri="ijomymStage://open" onclick="clickHandler(this.dataset.uri)">測試環境純開啟</a>
     </br>
     <a href="#" data-uri="ijomymStage://open?action=page_sticker_store&code=testttt&redirect_uri=https%3A%2F%2Fwww.google.com" onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
     </br>
@@ -35,9 +35,6 @@
     <input id="avatarInput" type="text" placeholder="輸入 avatarId"/>
     <a href="#" data-uri="ijomymStage://open?action=appearance_setting&avatarId=<avatarId>&code=testttt&redirect_uri=https%3A%2F%2Fwww.google.com" onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
     </br> -->
-
-    <a id="test" href="#" data-uri="ijomymStage://open" onclick="clickHandler(this.dataset.uri)">測試環境純開啟</a>
-    </br>
 
     <h3>純替代方案</h3>
     <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store"
@@ -77,7 +74,7 @@
         onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
     </br>
 
-    <h3>舊連結測試</h3>
+    <h3>Firebase舊連結測試</h3>
     <a href="#" data-uri="https://mymojistage.page.link/store" onclick="clickHandler(this.dataset.uri)">old 貼圖商店</a>
     </br>
     <a href="#" data-uri="https://mymojistage.page.link/deleteAvatar" onclick="clickHandler(this.dataset.uri)">old 刪除模型</a>
