--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -48,6 +48,8 @@
     </br>
 
     <h3>Deep Link 同帳號</h3>
+    <a href="https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&amp;state=webstate&state=appstate&scopes=31&code=pass">href new 貼圖商店</a>
+    </br>
     <a href="#"
         data-uri="https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&amp;state=webstate&state=appstate&scopes=31&code=pass"
         onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
