--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -134,7 +134,7 @@
         uri = uri.replace('<avatarId>', encodeURIComponent(avatarId));
         console.log(`uri: ${uri}`);
         // deeplink.open(uri);
-        window.location.href = uri;
+        // window.location.href = uri;
         return false;
     }
 
