--- a/testlink/deepLinkTest/index.html
+++ b/testlink/deepLinkTest/index.html
@@ -8,7 +8,7 @@
     *, *:before, *:after {
         box-sizing: border-box;
     }
-     a {
+    a,button {
         font-family: monospace;
         display: block;
         width: 100%;
