--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -111,15 +111,15 @@
     //     }
     // });
 
-    deeplink.setup({
-        iOS: {
-            appId: "1571072463",
-            appName: "mymojiStage",
-        },
-        android: {
-            appId: "com.taiwanmobile.myMojiStage"
-        }
-    });
+    // deeplink.setup({
+    //     iOS: {
+    //         appId: "1571072463",
+    //         appName: "mymojiStage",
+    //     },
+    //     android: {
+    //         appId: "com.taiwanmobile.myMojiStage"
+    //     }
+    // });
 
     // deeplink.setup({
     //     iOS: {
