--- a/testlink/deepLinkTest/index.html
+++ b/testlink/deepLinkTest/index.html
@@ -122,15 +122,15 @@
     //     }
     // });
 
-    deeplink.setup({
-        iOS: {
-            appId: "1558996892",
-            appName: "mymoji",
-        },
-        android: {
-            appId: "com.taiwanmobile.myMojiApp"
-        }
-    });
+    // deeplink.setup({
+    //     iOS: {
+    //         appId: "1558996892",
+    //         appName: "mymoji",
+    //     },
+    //     android: {
+    //         appId: "com.taiwanmobile.myMojiApp"
+    //     }
+    // });
 
     function clickHandler(uri) {
         var avatarId = document.getElementById('avatarInput').value;
