--- a/testlink/deepLinkTest/test.html
+++ b/testlink/deepLinkTest/test.html
@@ -127,7 +127,7 @@
             appName: "mymoji",
         },
         android: {
-            appId: "com.taiwanmobile.myMojiApp"
+            appId: "com.taiwanmobile.myMojiStage"
         }
     });
 
