--- a/testlink/deepLinkTest/test.html
+++ b/testlink/deepLinkTest/test.html
@@ -111,25 +111,25 @@
     //     }
     // });
 
-    // deeplink.setup({
-    //     iOS: {
-    //         appId: "1571072463",
-    //         appName: "mymojiStage",
-    //     },
-    //     android: {
-    //         appId: "com.taiwanmobile.myMojiStage"
-    //     }
-    // });
-
     deeplink.setup({
         iOS: {
-            appId: "1558996892",
-            appName: "mymoji",
+            appId: "1571072463",
+            appName: "mymojiStage",
         },
         android: {
             appId: "com.taiwanmobile.myMojiStage"
         }
     });
+
+    // deeplink.setup({
+    //     iOS: {
+    //         appId: "1558996892",
+    //         appName: "mymoji",
+    //     },
+    //     android: {
+    //         appId: "com.taiwanmobile.myMojiApp"
+    //     }
+    // });
 
     function clickHandler(uri) {
         var avatarId = document.getElementById('avatarInput').value;
