--- a/testlink/deepLinkTest/test.html
+++ b/testlink/deepLinkTest/test.html
@@ -26,7 +26,7 @@
     <h3>新連結測試</h3>
     <a id="test" href="#" data-uri="ijomymStage://open" onclick="clickHandler(this.dataset.uri)">測試環境純開啟</a>
     </br>
-    <!-- <a href="#" data-uri="ijomymStage://open?action=page_sticker_store&code=testttt&redirect_uri=https%3A%2F%2Fwww.google.com" onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
+    <a href="#" data-uri="ijomymStage://open?action=page_sticker_store&code=testttt&redirect_uri=https%3A%2F%2Fwww.google.com" onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
     </br>
     <a href="#" data-uri="ijomymStage://open?action=delete_avatar&code=testttt&redirect_uri=https%3A%2F%2Fwww.google.com" onclick="clickHandler(this.dataset.uri)">new 刪除模型</a>
     </br>
@@ -34,7 +34,7 @@
     </br>
     <input id="avatarInput" type="text" placeholder="輸入 avatarId"/>
     <a href="#" data-uri="ijomymStage://open?action=appearance_setting&avatarId=<avatarId>&code=testttt&redirect_uri=https%3A%2F%2Fwww.google.com" onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
-    </br> -->
+    </br>
 
     <h3>純替代方案</h3>
     <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store"
