--- a/testlink/deepLinkTest/test.html
+++ b/testlink/deepLinkTest/test.html
@@ -133,7 +133,7 @@
 
     function clickHandler(uri) {
         var avatarId = document.getElementById('avatarInput').value;
-        uri = uri.replace('<avatarId>', encodeURIComponent(avatarId));
+        uri = uri.replace('<avatarId>', avatarId);
         
         console.log(uri)
         deeplink.open(uri);
