--- a/testlink/deepLinkTest/test.html
+++ b/testlink/deepLinkTest/test.html
@@ -143,9 +143,9 @@
     
 
 
-    // //自動觸發
-    // let testa = document.getElementById("test");
-    // testa.click();
+    //自動觸發
+    let testa = document.getElementById("test");
+    testa.click();
 
     // testa.addEventListener('load', window.location.assign("fb://profile"), false);
     // document.getElementById("test_button").addEventListener('load', testa.click(), false);
