--- a/testlink/deepLinkTest/test.html
+++ b/testlink/deepLinkTest/test.html
@@ -65,13 +65,13 @@
     </br>
 
     <h3>Firebase舊連結測試</h3>
-    <a href="#" data-uri="https://mymojistage.page.link/store" onclick="clickHandler(this.dataset.uri)">old 貼圖商店</a>
+    <a href="#" data-uri="https://mymojistage.page.link/store" onclick="clickButton(this.dataset.uri)">old 貼圖商店</a>
     </br>
-    <a href="#" data-uri="https://mymojistage.page.link/deleteAvatar" onclick="clickHandler(this.dataset.uri)">old 刪除模型</a>
+    <a href="#" data-uri="https://mymojistage.page.link/deleteAvatar" onclick="clickButton(this.dataset.uri)">old 刪除模型</a>
     </br>
-    <a href="#" data-uri="https://mymojistage.page.link/campaign_card" onclick="clickHandler(this.dataset.uri)">old 賀卡</a>
+    <a href="#" data-uri="https://mymojistage.page.link/campaign_card" onclick="clickButton(this.dataset.uri)">old 賀卡</a>
     </br>
-    <a href="#" data-uri="https://mymojistage.page.link/download" onclick="clickHandler(this.dataset.uri)">old download</a>
+    <a href="#" data-uri="https://mymojistage.page.link/download" onclick="clickButton(this.dataset.uri)">old download</a>
     </br>
 
     <h3>開發測試</h3>
