--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -87,10 +87,10 @@
 
     <script type="text/javascript">
 
-    const storeUrlSuccess = "https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&amp;state=webstate&state=appstate&scopes=31&code=pass"
+    const storeUrlSuccess = "https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&amp;state=webstate&state=appstate&scopes=31&code=pass&redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Dpage_sticker_store%26state%3Dwebstate"
     const deleteUrlSuccess = "https://uat.mymoji.com.tw/redirect-link/?action=delete_avatar&amp;state=webstate&state=appstate&scopes=31&code=pass"
     const appearanceUrlSuccess = "https://uat.mymoji.com.tw/redirect-link/?action=appearance_setting&amp;avatarId=<avatarId>&amp;state=webstate&state=appstate&scopes=31&code=pass"
-    const storeUrlFail = "https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&amp;state=webstate&state=appstate&scopes=31&code=fail"
+    const storeUrlFail = "https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&amp;state=webstate&state=appstate&scopes=31&code=fail&redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Dpage_sticker_store%26state%3Dwebstate"
     const deleteUrlFail = "https://uat.mymoji.com.tw/redirect-link/?action=delete_avatar&amp;state=webstate&state=appstate&scopes=31&code=fail"
     const appearanceUrlFail = "https://uat.mymoji.com.tw/redirect-link/?action=appearance_setting&amp;avatarId=<avatarId>&amp;state=webstate&state=appstate&scopes=31&code=fail"
     
