--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -89,10 +89,10 @@
 
     const storeUrlSuccess = "https://uat.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Dpage_sticker_store%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code=pass"
     const deleteUrlSuccess = "https://uat.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Ddelete_avatar%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code%3Dpass"
-    const appearanceUrlSuccess = "https://uat.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Dpage_sticker_store%26amp%3BavatarId%3D<avatarId>%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code=pass"
+    const appearanceUrlSuccess = "https://uat.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Dappearance_setting%26amp%3BavatarId%3D<avatarId>%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code=pass"
     const storeUrlFail = "https://uat.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Dpage_sticker_store%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code=fail"
     const deleteUrlFail = "https://uat.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Ddelete_avatar%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code%3Dfail"
-    const appearanceUrlFail = "https://uat.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Dpage_sticker_store%26amp%3BavatarId%3D<avatarId>%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code=fail"
+    const appearanceUrlFail = "https://uat.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Dappearance_setting%26amp%3BavatarId%3D<avatarId>%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code=fail"
     
     function clickButton(uri) {
       var avatarId = document.getElementById('avatarInput').value;
