--- a/testlink/deepLinkTest/index.html
+++ b/testlink/deepLinkTest/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <script src="browser-deeplink.js" type="text/javascript"></script>
-    
+
     <style>
-    *, *:before, *:after {
-        box-sizing: border-box;
-    }
-    a,button {
+        *,
+        *:before,
+        *:after {
+            box-sizing: border-box;
+        }
+
+        a,button {
         font-family: monospace;
         display: block;
         width: 100%;
@@ -38,13 +41,13 @@
     </br> -->
 
     <h3>純替代方案</h3>
-    <a href="#" data-uri="https://www.mymoji.com.tw/redirect-link/?action=page_sticker_store"
+    <a href="#" data-uri="https://www.mymoji.com.tw/application/?action=page_sticker_store"
         onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
     </br>
-    <a href="#" data-uri="https://www.mymoji.com.tw/redirect-link/?action=delete_avatar"
+    <a href="#" data-uri="https://www.mymoji.com.tw/application/?action=delete_avatar"
         onclick="clickHandler(this.dataset.uri)">new 刪除模型</a>
     </br>
-    <a href="#" data-uri="https://www.mymoji.com.tw/redirect-link/?action=download"
+    <a href="#" data-uri="https://www.mymoji.com.tw/application/?action=download"
         onclick="clickHandler(this.dataset.uri)">new download</a>
     </br>
 
@@ -88,12 +91,12 @@
 
 <script type="text/javascript">
 
-    const storeUrlSuccess = "https://www.mymoji.com.tw/redirect-link/?action=page_sticker_store&amp;state=webstate&state=appstate&scopes=31&code=pass"
-    const deleteUrlSuccess = "https://www.mymoji.com.tw/redirect-link/?action=delete_avatar&amp;state=webstate&state=appstate&scopes=31&code=pass"
-    const appearanceUrlSuccess = "https://www.mymoji.com.tw/redirect-link/?action=appearance_setting&amp;avatarId=<avatarId>&amp;state=webstate&state=appstate&scopes=31&code=pass"
-    const storeUrlFail = "https://www.mymoji.com.tw/redirect-link/?action=page_sticker_store&amp;state=webstate&state=appstate&scopes=31&code=fail"
-    const deleteUrlFail = "https://www.mymoji.com.tw/redirect-link/?action=delete_avatar&amp;state=webstate&state=appstate&scopes=31&code=fail"
-    const appearanceUrlFail = "https://www.mymoji.com.tw/redirect-link/?action=appearance_setting&amp;avatarId=<avatarId>&amp;state=webstate&state=appstate&scopes=31&code=fail"
+    const storeUrlSuccess = "https://www.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Dpage_sticker_store%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code%3Dpass"
+    const deleteUrlSuccess = "https://www.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Ddelete_avatar%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code%3Dpass"
+    const appearanceUrlSuccess = "https://www.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Dappearance_setting%26amp%3BavatarId%3D<avatarId>%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code%3Dpass"
+    const storeUrlFail = "https://www.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Dpage_sticker_store%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code%3Dfail"
+    const deleteUrlFail = "https://www.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Ddelete_avatar%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code%3Dfail"
+    const appearanceUrlFail = "https://www.mymoji.com.tw/application/?redirect_uri=https%3A%2F%2Fuat.mymoji.com.tw%2Fredirect-link%2F%3Faction%3Dappearance_setting%26amp%3BavatarId%3D<avatarId>%26amp%3Bstate%3Dwebstate%26state%3Dappstate%26scopes%3D31%26code%3Dfail"
 
     function clickButton(uri) {
         var avatarId = document.getElementById('avatarInput').value;
