--- a/testlink/deepLinkTest/index.html
+++ b/testlink/deepLinkTest/index.html
@@ -69,9 +69,9 @@
     </br>
 
     <h3>Firebase舊連結測試</h3>
-    <a href="#" data-uri="https://mymojiapp.page.link/store" onclick="clickHandler(this.dataset.uri)">old 貼圖商店</a>
+    <a href="#" data-uri="https://mymojiapp.page.link/page_sticker_store" onclick="clickHandler(this.dataset.uri)">old 貼圖商店</a>
     </br>
-    <a href="#" data-uri="https://mymojiapp.page.link/deleteAvatar" onclick="clickHandler(this.dataset.uri)">old 刪除模型</a>
+    <a href="#" data-uri="https://mymojiapp.page.link/delete_avatar" onclick="clickHandler(this.dataset.uri)">old 刪除模型</a>
     </br>
     <a href="#" data-uri="https://mymojiapp.page.link/campaign_card" onclick="clickHandler(this.dataset.uri)">old 賀卡</a>
     </br>
