--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -46,6 +46,12 @@
     <a href="#" data-uri="https://uat.mymoji.com.tw/application/?action=download"
         onclick="clickHandler(this.dataset.uri)">new download</a>
     </br>
+    <a href="#" data-uri="https://uat.mymoji.com.tw/application/?action=campain_ubitus_25_1"
+        onclick="clickHandler(this.dataset.uri)">動圖活動一</a>
+    </br>
+    <a href="#" data-uri="https://uat.mymoji.com.tw/application/?action=campain_ubitus_25_2"
+        onclick="clickHandler(this.dataset.uri)">動圖活動二</a>
+    </br>
 
     <h3>Deep Link 同帳號</h3>
     <button onclick="clickButton(storeUrlSuccess)">new 貼圖商店 button</button>    
